# semantic-nucleus

./: .gitignore  .pre-commit-config.yaml  =6.105  ABORDAGENS_INTELIGENCIA_COMPLETO.md  ACHIEVEMENT_REPORT.md  APRENDIZADO_AVANCADO_COMPLETO.md  ARCHITECTURE_VISUAL.md  CHANGELOG.md  CODE_OF_CONDUCT.md  COMPREHENSIVE_STATUS.md  CONTRIBUTING.md  FINAL_STATUS_REPORT.md  IMPLEMENTACAO_COMPLETA.md  IMPROVEMENTS.md  LICENSE  PERFECT_AI_GUIDE.md  README.md  SCIENTIFIC_DOCUMENTATION.md  SECURITY.md  SISTEMA_COMPLETO.md  TASK_COMPLETE.md  USAGE_GUIDE.md  demo_perfect_ai.py  metanucleus_chat.py  metanucleus_chat_mk.py  metanucleus_chat_phi.py  pyproject.toml  pytest.ini  real_ai_demo.py
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml  release-drafter.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: auto-cycle.yml  auto-debug.yml  benchmarks.yml  metanucleus-auto-evolution.yml  metanucleus-evo.yml  release-drafter.yml  release.yml  tests.yml
.hypothesis/constants/: 049bebecf9dbe48d  04f557296d6d16d3  04fb2aabdee71082  05f816c6fe71683e  09781f3f15bffb16  0af7955e8fb08fca  0b2b426a9d801a21  0c243b93a28f9606  0e616a0da85e1461  0edbe96ebee2c73d  0f7c72088ce6b7f3  1058a221037afb70  11dd6fa08cc592e3  11efaee64fec50d3  128d3e48341bb8ac  12ef4138b1d4dc21  1441632399b8e6cf  14e6d31aa1db4a92  1505c06a7c29dc15  15248417ccad6492  159a33fd0d1f526a  15f998fddd6c37c7  16ce4adcfef3178b  194a8907745f8585  1e38fc3e81cf757d  215bc532b5926b48  258849b3e568e4cb  272288e8e8937981  285a88be682de45f  29192c6073754e2b  2a3c46f966995acf  2af2d9faf9b3331c  2b0c2a0fc99939dc  2be545b9be25a9e9  2c70bacc15b8085f  2ccb2b7ec6395260  2d4341a14b4c7592  2d7ca5a0f7d31ecb  2d7d1219d41aab3b  2dd8e26daf3618dd  (+196 more)
.meta/: meta_calculus_mismatches.jsonl
.nsr_memory/: episodes.jsonl  memory.jsonl  rule_suggestions.jsonl
ci-artifacts/: auto-report.json
docs/: README.md  advanced_learning_features.md  alternative_intelligence_approaches.md  cts_policy.md  ian_langpacks.md  manifesto.md  math_instinct.md  metanucleo_architecture.md  quickstart.md  review_policy.md  roadmap.md  roadmap_official.md  security_checklist.md  weightless_ml_architecture.md  weightless_ml_complete.md  weightless_ml_implementation.md
logs/: rule_mismatches.jsonl  semantic_mismatches.jsonl
ontology/: core_composition.json  core_entities.json  core_operations.json  core_semantics.json  core_structures.json  index_by_alias.json  index_by_category.json  index_by_name.json  ontology_schema.json
scripts/: auto_debug.py  ian_bench.py  langpack_check.py  langpack_dsl.py
spec/: liu.md  nsr.md  svm.md
spec/A_LIU/: README.md
tests/: __init__.py  test_evolution_rules_smoke.py  test_evolution_semantics_smoke.py  test_integration_metanucleus_auto_evolution.py  test_intent_and_language.py  test_meta_calculus_smoke.py  test_nsr_learn.py  test_nsr_learn_advanced.py  test_runtime_semantic_integration.py  test_semantic_frames_smoke.py
(+313 files in other folders)
