[project]
name = "nucleo-originario"
version = "0.1.0"
description = "Núcleo Originário - LIU/NSR/SigmaVM symbolic architecture"
authors = [{name = "NSR Builders"}]
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "coverage[toml]>=7.6",
    "pre-commit>=3.8",
    "ruff>=0.6",
    "black>=24.10",
    "blake3>=0.4.1",
    "cryptography>=43.0.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
