[project]
name = "nucleo-originario"
version = "0.1.0"
description = "Núcleo Originário - LIU/NSR/SigmaVM symbolic architecture"
authors = [{name = "NSR Builders"}]
readme = "README.md"
requires-python = ">=3.11"
license = {file = "LICENSE"}
keywords = ["metanucleo", "liu", "nsr", "svm", "deterministic-ai"]
dependencies = [
    "blake3>=0.4.1",
    "cryptography>=43.0.0",
    "requests>=2.32.0",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Compilers",
]

[project.urls]
"Homepage" = "https://github.com/nucleo-originario/nucleo-originario"
"Documentation" = "https://github.com/nucleo-originario/nucleo-originario/tree/main/docs"
"Repository" = "https://github.com/nucleo-originario/nucleo-originario.git"
"Bug Tracker" = "https://github.com/nucleo-originario/nucleo-originario/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "coverage[toml]>=7.6",
    "pre-commit>=3.8",
    "ruff>=0.6",
    "black>=24.10",
    "blake3>=0.4.1",
    "cryptography>=43.0.0",
    "hypothesis>=6.105",
]

[project.scripts]
metanucleus = "metanucleus.cli:main"
metanucleus-auto-evolve = "metanucleus.cli.auto_evolve:main"
metanucleus-chat = "metanucleus.cli.chat:main"
metanucleus-daemon = "metanucleus.daemon.auto_pr_daemon:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
